[package]
name = "iso8583-chain"
version = "0.0.1"
description = "A Substrate node, ready for hacking."
build = "build.rs"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "iso8583-chain"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }

sc-cli = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-offchain = { workspace = true }
sc-statement-store = { workspace = true }
sc-consensus-aura = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["std"] }
sc-consensus = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sp-consensus-grandpa = { workspace = true, features = ["std"] }
sc-client-api = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true }
sp-inherents = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
frame-system = { workspace = true, features = ["std"] }
pallet-transaction-payment = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sc-rpc-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true, features = ["std"] }
sc-basic-authorship = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true, features = ["std"] }
frame-benchmarking-cli = { workspace = true }

# Local Dependencies
iso-8583-runtime = { workspace = true }

# CLI-specific dependencies
try-runtime-cli = { workspace = true, optional = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"iso-8583-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["iso-8583-runtime/try-runtime", "try-runtime-cli/try-runtime"]
